use PSG and PAG acronyms; update introduction

--- a/manuscript/acronyms.tex
+++ b/manuscript/acronyms.tex
@@ -17,6 +17,8 @@
 \acrodef{TSI}{Tissue Specificity Index}
 \acrodef{SRA}{Sequence Read Archive}
 \acrodef{GH}{growth hormone}
+\acrodef{PSG}{pregnancy-specific glycoprotein}
+\acrodef{PAG}{pregnancy-associated glycoprotein}
 
 %%% Local Variables:
 %%% mode: latex
